original code from https://github.com/ding-lab/neoscan commit b31fa62

Made changes to neoscan.pl to take in optitype script as an input