@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "eb93fdb7",
+   "id": "c2d1ab67",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "e4fa5438",
+   "id": "b87730c5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "67a69fb5",
+   "id": "72a8ea20",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,6 +49,18 @@
     "        'class': 'File',\n",
     "        'path': 'a/file/path'\n",
     "    },\n",
+    "    'f_allele': {\n",
+    "        'class': 'File',\n",
+    "        'path': 'a/file/path'\n",
+    "    },\n",
+    "    'netmhc': {\n",
+    "        'class': 'File',\n",
+    "        'path': 'a/file/path'\n",
+    "    },\n",
+    "    'f_opti_config': {\n",
+    "        'class': 'File',\n",
+    "        'path': 'a/file/path'\n",
+    "    },\n",
     "    'input_type': 'a_string' # rna or dna, default is dna\n",
     "}"
    ]
@@ -56,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "6dd5ee92",
+   "id": "c6c1cab3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,8 +77,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "ac5a70eb",
+   "execution_count": 9,
+   "id": "f8f0c7cf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,6 +123,30 @@
     "            }\n",
     "        },\n",
     "        {\n",
+    "            'id': 'f_allele',\n",
+    "            'type': 'File',\n",
+    "            'inputBinding': {\n",
+    "                'prefix': '--f-allele',\n",
+    "                'position': '0'\n",
+    "            }\n",
+    "        },\n",
+    "                {\n",
+    "            'id': 'netmhc',\n",
+    "            'type': 'File',\n",
+    "            'inputBinding': {\n",
+    "                'prefix': '--netmhc',\n",
+    "                'position': '0'\n",
+    "            }\n",
+    "        },\n",
+    "                {\n",
+    "            'id': 'f_opti_config',\n",
+    "            'type': 'File',\n",
+    "            'inputBinding': {\n",
+    "                'prefix': '--f-opti-config',\n",
+    "                'position': '0'\n",
+    "            }\n",
+    "        },\n",
+    "        {\n",
     "            'id': 'input_type',\n",
     "            'type': 'string?',\n",
     "            'default': 'dna',\n",
@@ -147,6 +183,11 @@
     "            'prefix': '--optitype-script',\n",
     "            'valueFrom': '/miniconda/envs/neoscan/bin/OptiPathPipeline.py'\n",
     "        },\n",
+    "        {\n",
+    "            'position': 0,\n",
+    "            'prefix': '--f-opti-config',\n",
+    "            'valueFrom': '/pecgs-neoscan/src/neoscan/config.ini'\n",
+    "        },\n",
     "        \n",
     "    ],\n",
     "    'outputs': [\n",
@@ -168,7 +209,7 @@
     "        },\n",
     "        {\n",
     "            'class': 'ResourceRequirement',\n",
-    "            'ramMin': 50000,\n",
+    "            'ramMin': 28000,\n",
     "        },\n",
     "        {\n",
     "            'class': 'EnvVarRequirement',\n",
@@ -182,8 +223,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "38318c2e",
+   "execution_count": 10,
+   "id": "0bba2dde",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +234,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6b5c913f",
+   "id": "4fd59691",
    "metadata": {},
    "outputs": [],
    "source": []
