@@ -2,7 +2,7 @@
 
 # Absolute path to RazerS3 binary, and number of threads to use for mapping
 
-razers3=/gscmnt/gc2518/dinglab/scao/home/tools/anaconda3/bin/razers3
+razers3=/miniconda/envs/neoscan/bin/razers3
 threads=4
 
 [ilp]
